# Home_Automation_ESP

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
sw/example/: BUILD  example.c  example.h
tools/gcc/: BUILD
tools/mingw/: BUILD
