module(
    name = "esp_32_home",
    version = "0.0.1",
)

# =========================================
# Bazel module dependencies
# =========================================

# Declare dependencies

bazel_dep(name = "rules_cc", version = "0.0.17") # used for the c/cpp compilation
bazel_dep(name = "platforms", version = "0.0.10") # used for specifying platforms
bazel_dep(name = "zlib", version = "1.3.1.bcr.3") # used for CRC computation
bazel_dep(name = "with_cfg.bzl", version = "0.9.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_license", version = "1.0.0") # Licensce rules 
bazel_dep(name = "rules_python", version = "0.40.0") # Python rules
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest") #Unit testing

# =========================================
# Python dependencies
# =========================================
# Use the pip extension to fetch Python packages

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.install(
    name = "python_deps",
    python_version = "3.11",
    requirements_lock = "//third_party:requirements.txt",
)
use_repo(pip, "python_deps")



python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.11",
)

use_repo(pip, "bazel_pip_dev_deps")

# # =========================================
# # Register platforms & toolchains
# # =========================================

register_toolchains("@rules_python//python:autodetecting_toolchain")